# kirtan-captioning

./: .gitignore  GOOGLE_CHIRP_SETUP.md  LICENSE  README.md  requirements.txt  server.py
.github/workflows/: benchmark-windows.yml  ci.yml  run-on-youtube.yml
benchmark/: README.md  benchmark_client.py  eval.py  load_test.py  sttm_bridge.py
benchmark/results/: IZOsmkdmmcg.json  IZOsmkdmmcg_cold33.json  IZOsmkdmmcg_cold66.json  kZhIA8P6xWI.json  kZhIA8P6xWI_cold33.json  kZhIA8P6xWI_cold66.json  kchMJPK9Axs.json  kchMJPK9Axs_cold33.json  kchMJPK9Axs_cold66.json  zOtIpxMT9hU.json  zOtIpxMT9hU_cold33.json  zOtIpxMT9hU_cold66.json
benchmark/test/: IZOsmkdmmcg.json  IZOsmkdmmcg_cold33.json  IZOsmkdmmcg_cold66.json  kZhIA8P6xWI.json  kZhIA8P6xWI_cold33.json  kZhIA8P6xWI_cold66.json  kchMJPK9Axs.json  kchMJPK9Axs_cold33.json  kchMJPK9Axs_cold66.json  zOtIpxMT9hU.json  zOtIpxMT9hU_cold33.json  zOtIpxMT9hU_cold66.json
desktop/: README.md
desktop/frontend-stub/: error.html  manifest.json  mic.html  stub.html
desktop/sidecar/: requirements.txt  server.py  sidecar.spec
desktop/src-tauri/: Cargo.toml  Info.plist  README.md  build.rs  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
engine/: __init__.py  asr.py  config.py  corpus.py  event_types.py  google_auth.py  matcher.py  matcher_state.py  protocols.py  routes.py  session.py  wire.py
engine/_internal/: __init__.py  banidb_phrases.py  hard_ctc.py  onnx_inference.py
scripts/: build_corpus_json.py  chirp_transcribe.py  download_models.py
tests/: integration_server.py  regression_baseline.json  regression_sttm.py  test_eval_resolution.py
